2002-11-12  David Hyatt  <hyatt@apple.com>

	Fix the top of moveabletype.org.  The maxwidth/minwidth
	calculation for blocks with inline content did not properly
	deal with margins and padding on inline elements like <a>.
	
        * khtml/rendering/render_flow.cpp:
        (RenderFlow::calcInlineMinMaxWidth):

2002-11-12  David Hyatt  <hyatt@apple.com>

	Fix for 2953367, padding is incorrectly inherited into table cells
	and also incorrectly overrides cellpadding on the table itself.
	Fixes dailyf1.com.
	
        * khtml/css/html4.css:
        * khtml/html/html_tableimpl.cpp:
        (HTMLTableElementImpl::parseAttribute):
        (HTMLTableCellElementImpl::init):
        * khtml/html/html_tableimpl.h:

2002-11-12  David Hyatt  <hyatt@apple.com>

	For now make text/xml files use HTML parsing/documents.
	This avoids the infinite loop we get into when loading
	text/xml.  If/when we finally support XML, we can undo
	this change.
	
        * khtml/khtml_part.cpp:
        (KHTMLPart::begin):

2002-11-12  David Hyatt  <hyatt@apple.com>

	Fix for 3086321, stylesheets not loading if titles are
	specified.  Note that 4 of the pages on the PLT were
	affected by this, so I fully expect a slight performance
	degradation (the boost from the regression was artificial).
	
        * khtml/xml/dom_docimpl.cpp:
        (DocumentImpl::recalcStyleSelector):

2002-11-12  Richard Williamson  <rjw@apple.com>

        Oops, removed debugging.
        
        * khtml/rendering/font.cpp:
        (Font::drawText):

2002-11-12  Richard Williamson  <rjw@apple.com>

        Implemented letter-spacing and word-spacing CSS properties.
        
        * khtml/rendering/font.cpp:
        (Font::drawText):
        (Font::floatWidth):
        (Font::floatCharacterWidths):
        * kwq/KWQFontMetrics.h:
        * kwq/KWQFontMetrics.mm:
        (QFontMetrics::width):
        (QFontMetrics::floatWidth):
        (QFontMetrics::floatCharacterWidths):
        * kwq/KWQPainter.h: