@@ -77,18 +77,19 @@ void RenderHtml::printBoxDecorations(QPainter *p,int, int _y,
 
 //    kdDebug(0) << "width = " << w <<endl;
 
-    int rw;
+    int rw, rh;
     if (root()->view())
         rw=root()->view()->contentsWidth();
     else
         rw=root()->width();
-
+    rh=root()->height();
+    
 //    kdDebug(0) << "rw = " << rw <<endl;
 
     int bx = _tx - marginLeft();
     int by = _ty - marginTop();
     int bw = QMAX(w + marginLeft() + marginRight() + borderLeft() + borderRight(), rw);
-    int bh = QMAX(h + marginTop() + marginBottom() + borderTop() + borderBottom(), parent()->height());
+    int bh = QMAX(h + marginTop() + marginBottom() + borderTop() + borderBottom(), rh);
 
     // CSS2 14.2:
     // " The background of the box generated by the root element covers the entire canvas."
